[package]
name = "defgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
egui = "0.19.0"
log = "0.4.17"
simple_logger = "4.0.0"
serde_json = "1.0.70"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]
